# bitbuilders-code-race-jan-2026

./: docker-compose.yml
api/: .env.sample  .gitignore  Cargo.toml
api/src/: auth.rs  lib.rs  main.rs  user.rs
api/src/contract/repo/: auth_repo_trait.rs  item_repo_trait.rs  mod.rs  user_entity.rs  user_repo_trait.rs
api/src/contract/service/: auth_service_trait.rs  mod.rs  user_service.rs  user_service_trait.rs
api/src/dto/: item_dto.rs  mod.rs  user_dto.rs
api/src/entity/: auth_entity.rs  item_entity.rs  mod.rs  user_entity.rs
api/src/handler/: auth_handler.rs  item_handler.rs  mod.rs  user_handler.rs
api/src/repo/: auth.rs  auth_repo.rs  item_repo.rs  mod.rs  user_repo.rs
api/src/service/: auth_service.rs  user_service.rs
api/tests/: e2e_api.rs
migration/: Cargo.toml
migration/src/: item.rs  main.rs  user.rs
